@startuml classes_pieces
set namespaceSeparator none
class "aiBoardGame.logic.engine.pieces.advisor.Advisor" as aiBoardGame.logic.engine.pieces.advisor.Advisor #aliceblue {
}
class "aiBoardGame.logic.engine.pieces.cannon.Cannon" as aiBoardGame.logic.engine.pieces.cannon.Cannon #aliceblue {
}
class "aiBoardGame.logic.engine.pieces.chariot.Chariot" as aiBoardGame.logic.engine.pieces.chariot.Chariot #aliceblue {
}
class "aiBoardGame.logic.engine.pieces.elephant.Elephant" as aiBoardGame.logic.engine.pieces.elephant.Elephant #aliceblue {
}
class "aiBoardGame.logic.engine.pieces.general.General" as aiBoardGame.logic.engine.pieces.general.General #aliceblue {
}
class "aiBoardGame.logic.engine.pieces.horse.Horse" as aiBoardGame.logic.engine.pieces.horse.Horse #aliceblue {
}
abstract class "aiBoardGame.logic.engine.pieces.piece.Piece" as aiBoardGame.logic.engine.pieces.piece.Piece #aliceblue {
}
class "aiBoardGame.logic.engine.pieces.soldier.Soldier" as aiBoardGame.logic.engine.pieces.soldier.Soldier #aliceblue {
}
aiBoardGame.logic.engine.pieces.advisor.Advisor --|> aiBoardGame.logic.engine.pieces.piece.Piece
aiBoardGame.logic.engine.pieces.cannon.Cannon --|> aiBoardGame.logic.engine.pieces.piece.Piece
aiBoardGame.logic.engine.pieces.chariot.Chariot --|> aiBoardGame.logic.engine.pieces.piece.Piece
aiBoardGame.logic.engine.pieces.elephant.Elephant --|> aiBoardGame.logic.engine.pieces.piece.Piece
aiBoardGame.logic.engine.pieces.general.General --|> aiBoardGame.logic.engine.pieces.piece.Piece
aiBoardGame.logic.engine.pieces.horse.Horse --|> aiBoardGame.logic.engine.pieces.piece.Piece
aiBoardGame.logic.engine.pieces.soldier.Soldier --|> aiBoardGame.logic.engine.pieces.piece.Piece
@enduml
